--- a/test/Makefile
+++ b/test/Makefile
@@ -2,8 +2,8 @@ TESTS = cdijkstra graph edge_disjoint_ksp routing sdi_args utils
 
 OTHER = connected
 
-OBJS = ../cdijkstra.o ../edksp.o ../routing.o ../sdi_args.o	\
-../utils.o ../utils_netgen.o
+OBJS = ../cdijkstra.o ../edksp.o ../mypoint.o ../routing.o	\
+../sdi_args.o ../teventqueue.o ../utils.o ../utils_netgen.o
 
 #CXXFLAGS = -g -Wno-deprecated -std=c++11
 CXXFLAGS = -O3 -Wno-deprecated -std=c++11
