--- a/test/Makefile
+++ b/test/Makefile
@@ -5,8 +5,8 @@ OTHER = connected
 OBJS = ../cdijkstra.o ../edksp.o ../mypoint.o ../routing.o	\
 ../sdi_args.o ../teventqueue.o ../utils.o ../utils_netgen.o
 
-#CXXFLAGS = -g -Wno-deprecated -std=c++11
-CXXFLAGS = -O3 -Wno-deprecated -std=c++11
+CXXFLAGS = -g -Wno-deprecated -std=c++11
+#CXXFLAGS = -O3 -Wno-deprecated -std=c++11
 
 CXXFLAGS := $(CXXFLAGS) -I ../
 
