--- a/test/Makefile
+++ b/test/Makefile
@@ -1,5 +1,5 @@
 TESTS = cdijkstra graph edge_disjoint_ksp routing sdi_args utils	\
-yen_ksp
+yen_ksp various
 
 OTHER = connected
 
@@ -48,6 +48,9 @@ utils: utils.o $(OBJS)
 	g++ $(CXXFLAGS) $^ $(LDFLAGS) -o $@
 
 yen_ksp: yen_ksp.o $(OBJS)
+	g++ $(CXXFLAGS) $^ $(LDFLAGS) -o $@
+
+various: various.o $(OBJS)
 	g++ $(CXXFLAGS) $^ $(LDFLAGS) -o $@
 
 # run the tests
